third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda_param.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda_param.move:19:24
   │
19 │     let a = inline_apply2(|x| x, 3);
   │                           ^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda_param.move:24:24
   │
24 │     let a = inline_apply2(|x| x, 3);
   │                           ^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda_param.move:26:23
   │
26 │     let b = inline_apply(|x| x, 3);
   │                          ^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/lambda_param.move:28:24
   │
28 │     let b = inline_apply3(|x| x, 3);
   │                           ^^^^^
